--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,10 +1,13 @@
 services:
   backend:
     build: ./mern/backend
+    container_name: backend_container
     ports:
       - "5050:5050" 
     networks:
       - mern_network
+    volumes:
+      - backend_volume:/app
     environment:
       MONGO_URI: mongodb://mongo:27017/mydatabase  
     depends_on:
@@ -12,13 +15,15 @@ services:
 
   frontend:
     build: ./mern/frontend
+    container_name: front_container
     ports:
       - "5173:5173"  
     networks:
       - mern_network
-    environment:
-      REACT_APP_API_URL: http://backend:5050 
-
+    depends_on:
+      - backend
+    volumes:
+      - frontend_volume:/app
   mongodb:
     image: mongo:latest  
     ports:
@@ -26,7 +31,45 @@ services:
     networks:
       - mern_network
     volumes:
-      - mongo-data:/data/db  
+      - mongo-data:/data/db 
+
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: prometheus_container
+    ports:
+      - "9090:9090"
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+    networks:
+      - mern_network
+    depends_on:
+       - nginx
+
+  nginx:
+    build:
+      context: ./nginx
+    container_name: nginx_container
+    ports:
+      - "80:80" 
+    networks:
+      - mern_network
+    depends_on:
+      - backend
+  
+  nginx-exporter:
+    image: nginx/nginx-prometheus-exporter:latest
+    container_name: nginx_exporter_container
+    ports:
+      - "9113:9113"
+    networks:
+      - mern_network
+    depends_on:
+      - prometheus
+    command:
+      - --nginx.scrape-uri=http://nginx:80/nginx_status
+    environment:
+      NGINX_HOST: "nginx" 
+      NGINX_PORT: "80"     
 
 networks:
   mern_network:
@@ -34,5 +77,9 @@ networks:
 
 volumes:
   mongo-data:
-    driver: local  # Persist MongoDB data locally
+    driver: local
+  backend_volume:
+    driver: local  
+  frontend_volume:
+    driver: local  
 
