--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -69,7 +69,19 @@ services:
       - --nginx.scrape-uri=http://nginx:80/nginx_status
     environment:
       NGINX_HOST: "nginx" 
-      NGINX_PORT: "80"     
+      NGINX_PORT: "80"
+
+  grafana:
+    image: grafana/grafana:latest
+    container_name: grafana_container
+    ports:
+      - "3000:3000"
+    networks:
+      - mern_network
+    depends_on:
+      - prometheus
+    environment:
+      GF_SECURITY_ADMIN_PASSWORD: "Ankit@123"    
 
 networks:
   mern_network:
