--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -53,6 +53,8 @@ services:
       - "80:80" 
     networks:
       - mern_network
+    volumes:
+      - ./nginx_log:/var/log/nginx
     depends_on:
       - backend
   
@@ -83,6 +85,46 @@ services:
     environment:
       GF_SECURITY_ADMIN_PASSWORD: "Ankit@123"    
 
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:8.6.0
+    container_name: elasticsearch_container
+    environment: 
+      - discovery.type= single-node
+      - ES_JAVA_OPTS=-Xmx1g -Xms1g
+      - xpack.security.enabled=false
+    ports:
+      - "9200:9200"
+    networks:
+      - mern_network
+    depends_on:
+      - nginx
+
+  kibana:
+    image: docker.elastic.co/kibana/kibana:8.6.0
+    container_name: kibana_container
+    ports:
+      - "5601:5601"
+    environment:
+      - ELASTICSEARCH_URL=http://elasticsearch:9200
+    networks:
+      - mern_network
+    depends_on:
+      - elasticsearch
+
+  filebeat:
+    image: docker.elastic.co/beats/filebeat:8.6.0
+    container_name: filebeat_container
+    environment:
+      - ELASTICSEARCH_HOST=elasticsearch:9200
+    volumes:
+      - ./filebeat.yml:/usr/share/filebeat/filebeat.yml
+      - ./nginx_log:/usr/share/filebeat/logs
+    networks:
+      - mern_network
+    depends_on:
+      - elasticsearch
+      - kibana
+
 networks:
   mern_network:
     driver: bridge 
@@ -93,5 +135,10 @@ volumes:
   backend_volume:
     driver: local  
   frontend_volume:
-    driver: local  
+    driver: local
+  elasticsearch_data:
+    driver: local
+  nginx_log:
+    driver: local
+
 
